Azure-ARM/ingressletsencrypt.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: profisee-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers: "4 256k"
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "256k"
    nginx.ingress.kubernetes.io/client-header-buffer-size: "64k"
    nginx.ingress.kubernetes.io/http2-max-field-size: "16k"
    nginx.ingress.kubernetes.io/http2-max-header-size: "128k"
    nginx.ingress.kubernetes.io/large-client-header-buffers: "8 64k"
    nginx.ingress.kubernetes.io/client_body_buffer_size: "64k"
    cert-manager.io/cluster-issuer: letsencrypt
   
spec:
  tls:
  - hosts:
    - $EXTERNALDNSNAME
    secretName: tls-secret
  rules:
    - http:
        paths:
        - path: /(.*)
          backend:
            serviceName: profisee-service
            servicePort: 80
